# GridfinityStepGenerator

./: .gitignore  README.md  pyproject.toml
.hermes/plans/: 2026-05-27_011042-gridfinity-step-port.md
gridfinity_step/: __init__.py  baseplate.py  config.py  constants.py  export.py  geometry.py  gridfinity.py
gridfinity_step/cli/: baseplate.py  cup.py
gridfinity_step/core/: bin.py
gridfinity_step/features/: base.py  lip.py
